--- a/templates/admin.html
+++ b/templates/admin.html
@@ -20,7 +20,7 @@
         <form  method="GET" action="/admin">
           <div class="row">
             <div class="col m10 input-field">
-              <input class="blue-text"  name="q" type="search" placeholder="Search">
+              <input class="blue-text" value="{{q}}" name="q" type="search" placeholder="Search">
             </div>
             <div class="col m2 input-field">
               <div class="row">
@@ -34,7 +34,7 @@
 
             </div>
           </div>
-
+          
           <div class="row">
             <label>
              <input class="with-gap blue" name="done" type="radio" value="true" onchange="this.form.submit()" {{ "checked" if done=="true" }} />
