--- a/templates/signup.html
+++ b/templates/signup.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 <main class="container" style="margin-top: 100px">
-    <form class="card col s12" id="loginForm" method="POST" action="/signup" style="padding:1em">
+    <form class="card col s12" id="loginForm" method="POST" action="/signup" style="padding:1em"> <!--for html only POST and GET-->
        
        <div class="row">
          <div class="input-field col s12">
